--- a/package.json
+++ b/package.json
@@ -6,16 +6,30 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "seed": "ts-node ./script/loadDb.ts"
   },
   "dependencies": {
+    "@datastax/astra-db-ts": "^1.1.0",
+    "@google/generative-ai": "^0.21.0",
+    "@mistralai/mistralai": "^1.5.0",
+    "ai": "^4.1.32",
+    "dotenv": "^16.4.5",
+    "langchain": "^0.1.36",
+    "lucide-react": "^0.476.0",
+    "next": "15.1.6",
+    "openai": "^4.41.0",
+    "puppeteer": "^19.11.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "next": "15.1.6"
+    "ts-node": "^10.9.2"
   },
   "devDependencies": {
+    "@eslint/eslintrc": "^3",
+    "@types/node": "^22.13.1",
+    "@types/react": "^19.0.8",
     "eslint": "^9",
     "eslint-config-next": "15.1.6",
-    "@eslint/eslintrc": "^3"
+    "typescript": "^5.7.3"
   }
 }
